ArVuforia.framework.js.gz: descompactei .. problemas.

--- a/ArVuforia/index.html
+++ b/ArVuforia/index.html
@@ -59,7 +59,7 @@
       var loaderUrl = buildUrl + "/ArVuforia.loader.js";
       var config = {
         dataUrl: buildUrl + "/ArVuforia.data.gz",
-        frameworkUrl: buildUrl + "/ArVuforia.framework.js.gz",
+        frameworkUrl: buildUrl + "/build.framework.js",
         codeUrl: buildUrl + "/ArVuforia.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Furbot",
