ArVuforia.data.gz: descompactei - problema.

--- a/ArVuforia/index.html
+++ b/ArVuforia/index.html
@@ -58,7 +58,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/ArVuforia.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ArVuforia.data.gz",
+        dataUrl: buildUrl + "/webgl.data",
         frameworkUrl: buildUrl + "/build.framework.js",
         codeUrl: buildUrl + "/ArVuforia.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
