--- a/lixo/index.html
+++ b/lixo/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/lixo.loader.js";
+      var loaderUrl = buildUrl + "/buildLixo_WEB.loader.js";
       var config = {
-        dataUrl: buildUrl + "/lixo.data",
-        frameworkUrl: buildUrl + "/lixo.framework.js",
-        codeUrl: buildUrl + "/lixo.wasm",
+        dataUrl: buildUrl + "/buildLixo_WEB.data.br",
+        frameworkUrl: buildUrl + "/buildLixo_WEB.framework.js.br",
+        codeUrl: buildUrl + "/buildLixo_WEB.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Jogo do lixo",
