--- a/confronto/index.html
+++ b/confronto/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | ConfrontoMutans</title>
+    <title>Unity WebGL Player | ConfrontoMutan</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">ConfrontoMutans</div>
+        <div id="unity-build-title">ConfrontoMutan</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/confronto.loader.js";
+      var loaderUrl = buildUrl + "/BuildConfrontoMutan_WEB.loader.js";
       var config = {
-        dataUrl: buildUrl + "/confronto.data",
-        frameworkUrl: buildUrl + "/confronto.framework.js",
-        codeUrl: buildUrl + "/confronto.wasm",
+        dataUrl: buildUrl + "/BuildConfrontoMutan_WEB.data.br",
+        frameworkUrl: buildUrl + "/BuildConfrontoMutan_WEB.framework.js.br",
+        codeUrl: buildUrl + "/BuildConfrontoMutan_WEB.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "ConfrontoMutans",
+        productName: "ConfrontoMutan",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
