--- a/confronto/index.html
+++ b/confronto/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=1280 height=720></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/BuildConfrontoMutan_WEB.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildConfrontoMutan_WEB.data.br",
-        frameworkUrl: buildUrl + "/BuildConfrontoMutan_WEB.framework.js.br",
-        codeUrl: buildUrl + "/BuildConfrontoMutan_WEB.wasm.br",
+        dataUrl: buildUrl + "/BuildConfrontoMutan_WEB.data",
+        frameworkUrl: buildUrl + "/BuildConfrontoMutan_WEB.framework.js",
+        codeUrl: buildUrl + "/BuildConfrontoMutan_WEB.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ConfrontoMutan",
@@ -82,8 +82,8 @@
         config.devicePixelRatio = 1;
         unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1280px";
+        canvas.style.height = "720px";
       }
       loadingBar.style.display = "block";
 
