--- a/escovacao/index.html
+++ b/escovacao/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=1280 height=720></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/escovacao.loader.js";
+      var loaderUrl = buildUrl + "/BuildEscovacao_WEB.loader.js";
       var config = {
-        dataUrl: buildUrl + "/escovacao.data",
-        frameworkUrl: buildUrl + "/escovacao.framework.js",
-        codeUrl: buildUrl + "/escovacao.wasm",
+        dataUrl: buildUrl + "/BuildEscovacao_WEB.data",
+        frameworkUrl: buildUrl + "/BuildEscovacao_WEB.framework.js",
+        codeUrl: buildUrl + "/BuildEscovacao_WEB.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Escovacao",
@@ -82,8 +82,8 @@
         config.devicePixelRatio = 1;
         unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1280px";
+        canvas.style.height = "720px";
       }
       loadingBar.style.display = "block";
 
