--- a/confronto/index.html
+++ b/confronto/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BuildConfrontoMutan_WEB.loader.js";
+      var loaderUrl = buildUrl + "/confronto.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildConfrontoMutan_WEB.data",
-        frameworkUrl: buildUrl + "/BuildConfrontoMutan_WEB.framework.js",
-        codeUrl: buildUrl + "/BuildConfrontoMutan_WEB.wasm",
+        dataUrl: buildUrl + "/confronto.data",
+        frameworkUrl: buildUrl + "/confronto.framework.js",
+        codeUrl: buildUrl + "/confronto.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ConfrontoMutan",
