--- a/escovacao/index.html
+++ b/escovacao/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BuildEscovacao_WEB.loader.js";
+      var loaderUrl = buildUrl + "/escovacao.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildEscovacao_WEB.data",
-        frameworkUrl: buildUrl + "/BuildEscovacao_WEB.framework.js",
-        codeUrl: buildUrl + "/BuildEscovacao_WEB.wasm",
+        dataUrl: buildUrl + "/escovacao.data",
+        frameworkUrl: buildUrl + "/escovacao.framework.js",
+        codeUrl: buildUrl + "/escovacao.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Escovacao",
