ArVoria: ImageTarget QRCode.

--- a/ArVuforia/index.html
+++ b/ArVuforia/index.html
@@ -58,8 +58,8 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/ArVuforia.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webgl.data",
-        frameworkUrl: buildUrl + "/build.framework.js",
+        dataUrl: buildUrl + "/ArVuforia.data.gz",
+        frameworkUrl: buildUrl + "/ArVuforia.framework.js.gz",
         codeUrl: buildUrl + "/ArVuforia.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Furbot",
