--- a/labirinto/index.html
+++ b/labirinto/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/buildWEB_labirinto.loader.js";
+      var loaderUrl = buildUrl + "/labirinto.loader.js";
       var config = {
-        dataUrl: buildUrl + "/buildWEB_labirinto.data",
-        frameworkUrl: buildUrl + "/buildWEB_labirinto.framework.js",
-        codeUrl: buildUrl + "/buildWEB_labirinto.wasm",
+        dataUrl: buildUrl + "/labirinto.data",
+        frameworkUrl: buildUrl + "/labirinto.framework.js",
+        codeUrl: buildUrl + "/labirinto.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Labirinto",
